Remove highlights style since it leads to overlaps of parts of a highlight that cannot be resolved easily and look like multiple highlights when it is actually one

--- a/vue/src/styles/annotation/highlights.scss
+++ b/vue/src/styles/annotation/highlights.scss
@@ -8,27 +8,12 @@
 
 @mixin colorized-bg-highlight($color) {
   cursor: pointer;
-  background: transparent linear-gradient(
-                  to right,
-                  rgba($color, 0.3),
-                  rgba($color, 0.9) 4%,
-                  rgba($color, 0.5)
-  );
+  background: $color;
 }
 
 // `longpage-highlights-always-on` is a class that is toggled on the
 //  annotated longpage-container when highlights are enabled/disabled.
 .longpage-highlights-always-on {
-  .longpage-highlight {
-    position: relative;
-    mix-blend-mode: multiply;
-    margin: 0 -0.4em;
-    padding: 0.1em 0.4em;
-    border-radius: 0.8em 0.3em;
-    -webkit-box-decoration-break: clone;
-    box-decoration-break: clone;
-  }
-
   .annotation-toolbar-item, .longpage-highlight {
     &.bg-yellow {
       @include colorized-bg-highlight($color-highlight-yellow);
